improve the edit feature and separate input, duedate and button components

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+
+.custom-modal .ant-modal-content{
+    background-color: rgb(14 116 144 )
+}
+
+.custom-modal .ant-modal-body{
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.custom-modal .ant-modal-title{
+    background-color: rgb(14 116 144 )
+}
+
